AUTOMAKE_OPTIONS=foreign 
INCLUDES = -I$(top_builddir)/include 
noinst_PROGRAMS = screenlock
EXTRA_DIST= README \
drawable/icon.png \
drawable/time_0.png \
drawable/time_5.png \
drawable/time_am_cn.png\
drawable/bg.png \
drawable/line.png  \
drawable/time_1.png \
drawable/time_6.png  \
drawable/time_am.png \
drawable/btn_bg.png \
drawable/mask.png \
drawable/time_2.png  \
drawable/time_7.png \
drawable/time_dot.png \
drawable/btn.png \
drawable/msg.png  \
drawable/time_3.png \
drawable/time_8.png \
drawable/time_pm_cn.png \
drawable/dot_bg.png  \
drawable/preview_1.jpg  \
drawable/time_4.png  \
drawable/time_9.png  \
drawable/time_pm.png

screenlock_SOURCES = screenlock.c 
screenlock_LDADD   = $(top_builddir)/src/libLCUI.la 
