AUTOMAKE_OPTIONS=foreign
INSTINCLUDES=button.h \
picturebox.h \
progressbar.h \
label.h label.hpp\
window.h window.hpp\
menu.h \
checkbox.h \
radiobutton.h \
activebox.h \
textbox.h \
scrollbar.h

# Headers to install
pkginclude_HEADERS = $(INSTINCLUDES)
pkgincludedir=$(prefix)/include/LCUI/widget

